ISPN-7659 Fix externalizers for JDK types
Opening the java.base packages to all unnamed modules fixes
the test suite for now, but we will have to run without any
--add-opens arguments eventually.